Updated layout issue with events items

--- a/static/unminified-static/stylesheets/page.css
+++ b/static/unminified-static/stylesheets/page.css
@@ -1304,6 +1304,14 @@ button.community-images-more-btn:hover {
     padding: 1rem;
 }
 
+.event-to-wrapper {
+    margin: 0.25rem 0;
+}
+
+.event-date {
+    text-align: center;
+}
+
 .event-right-info {
     width: 85%;
     display: flex;
